WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300277
REGRESSION (
300681@main
): [visionOS] Web process crashes when editing any text
https://bugs.webkit.org/show_bug.cgi?id=300277
Summary
REGRESSION (300681@main): [visionOS] Web process crashes when editing any text
Wenson Hsieh
Reported
2025-10-06 18:47:26 PDT
rdar://162071389
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-10-06 18:56:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51904
EWS
Comment 2
2025-10-06 21:28:10 PDT
Committed
301108@main
(c6af2674f2a0): <
https://commits.webkit.org/301108@main
> Reviewed commits have been landed. Closing PR #51904 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug