REGRESSION (300681@main): [visionOS] Web process crashes when editing any text https://bugs.webkit.org/show_bug.cgi?id=300277 rdar://162071389

Reviewed by Abrar Rahman Protyasha and Aditya Keerthi.

Instead of `MESSAGE_CHECK`-ing as a result of failing to decode a custom web font descriptor in
`FontWrapper::createFromIPCData`, fall back to the system font using `CTFontCreateUIFontForLanguage`.
This primarily affects visionOS, which requests document editing context data with attributed text
while the user types.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/DocumentEditingContext.mm

* Source/WebCore/editing/cocoa/AttributedString.mm:
(WebCore::AttributedString::FontWrapper::createFromIPCData):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/DocumentEditingContext.mm:
(TEST(DocumentEditingContext, RequestAttributedTextWithCustomFont)):

Add an API test that exercises this behavior by requesting `UIWKDocumentRequestAttributed` in an
editable container with a custom font (Ahem).

Canonical link: https://commits.webkit.org/301108@main